--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -5,17 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "Foshati", email = "amirrezafoshati@gmail.com"},
 ]
-dependencies = [
-    "fastapi[all]>=0.115.4",
-    "uvicorn>=0.32.0",
-    "transformers>=4.46.1",
-    "psycopg2>=2.9.10",
-    "numpy>=2.1.2",
-    "scikit-learn>=1.5.2",
-    "torch>=2.5.1",
-    "psycopg2-binary>=2.9.10",
-    "pydantic>=2.9.2",
-]
+dependencies = ["fastapi>=0.115.4", "uvicorn>=0.32.0", "sqlalchemy>=2.0.36", "psycopg2>=2.9.10", "pydantic>=2.9.2"]
 requires-python = ">=3.12"
 readme = "README.md"
 license = {text = "MIT"}
